# stapy116

./: .gitignore  .textlintrc.json  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/: commit-best-practices.md  common-patterns.md  context.md  implementation-notes.md  project-improvements.md  project-knowledge.md  project-plan.md  pyqc-spec.md  sample-project.md  settings.json  settings.json.template  slides-project.md
.claude/commands/: learnings.md  r.md
.github/workflows/: deploy-pages.yml
docs/: Makefile  conf.py  index.md
draft/: pre-commit-test.md  sample.-project-plan.md  slides-rule-draft.md  talk-concept.md  vive-vs-agent.md
plans/: index.md
plans/active/: PLAN-2025-07-10-001.md  PLAN-2025-07-12-001.md
plans/completed/: PLAN-2025-07-10-001.md  PLAN-2025-07-12-001.md  PLAN-2025-07-14-001.md  PLAN-2025-07-14-002.md  PLAN-2025-07-14-003.md
plans/template/: implementation-plan.md
pyqc/: .pre-commit-config.yaml  README.md  pyproject.toml
pyqc/.claude/: hooks.json
pyqc/docs/: hooks-setup.md
pyqc/sample_project/: example.py
pyqc/scripts/: README.md  bash_event_test.py  claude_hooks.py  git_hooks_detector.py  git_post_commit.py  git_pre_commit.py  pyqc_hooks.py
pyqc/src/pyqc/: __init__.py  __main__.py  cli.py  config.py  core.py
pyqc/src/pyqc/checkers/: __init__.py  ruff_checker.py  type_checker.py
pyqc/src/pyqc/utils/: __init__.py  logger.py
pyqc/tests/: test_cli.py
pyqc/tests/e2e/: test_e2e.py
pyqc/tests/integration/: test_cli.py  test_parallel_execution.py
pyqc/tests/unit/: test_cli_utils.py  test_config.py  test_core.py  test_main.py  test_ruff_checker.py  test_type_checker.py  test_utils.py
slides/: conf.py  index.md
slides/_static/: custom.css
slides/sample/: pyqc-check.md
